rds-mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: web-app
spec:
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: web-app
